hphp/hack/test/typecheck/case_type/recursive/variance1.php.exp
ERROR: File "variance1.php", line 10, characters 28-28:
Illegal usage of a contravariant type parameter (Typing[4121])
  File "variance1.php", line 10, characters 14-14:
  This is where the parameter was declared as contravariant `-`
  File "variance1.php", line 10, characters 28-28:
  This position is covariant (+) because it is the composition of (-)(-)(+)
The rest of the error messages decomposes the inference of the variance.
Check out this link if you don't understand what this is about:
http://en.wikipedia.org/wiki/Covariance_and_contravariance_(computer_science)
  File "variance1.php", line 10, characters 28-28:
  (-) This type parameter was declared as contravariant (-) (cf 'D')
  File "variance1.php", line 10, characters 26-29:
  (-) This type parameter was declared as contravariant (-) (cf 'Contra')
  File "variance1.php", line 10, characters 19-30:
  (+) Aliased types are covariant
ERROR: File "variance1.php", line 11, characters 28-28:
Illegal usage of a covariant type parameter (Typing[4120])
  File "variance1.php", line 11, characters 14-14:
  This is where the parameter was declared as covariant `+`
  File "variance1.php", line 11, characters 28-28:
  This position is contravariant (-) because it is the composition of (+)(-)(+)
The rest of the error messages decomposes the inference of the variance.
Check out this link if you don't understand what this is about:
http://en.wikipedia.org/wiki/Covariance_and_contravariance_(computer_science)
  File "variance1.php", line 11, characters 28-28:
  (+) This type parameter was declared as covariant (+) (cf 'E')
  File "variance1.php", line 11, characters 26-29:
  (-) This type parameter was declared as contravariant (-) (cf 'Contra')
  File "variance1.php", line 11, characters 19-30:
  (+) Aliased types are covariant
